# LottoAnalysis

./: Cargo.toml  Dockerfile  README.md  render.yaml
src/: analysis.rs  main.rs  models.rs  scraper.rs
static/: app.js  styles.css
templates/: index.html
