[package]
name = "lotto_analysis_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.3"
actix-files = "0.6"

# Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Background Tasks
tokio = { version = "1", features = ["full"] }

# Web Scraping & HTTP
# Using rustls-tls for better cross-platform compatibility.
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.13"

# Statistics & Analysis
statrs = "0.17"

# Machine Learning
linfa = "0.7"
linfa-trees = "0.7"
ndarray = "0.15"

# Error Handling
anyhow = "1.0"

# Memory Allocator
mimalloc = { version = "0.1", default-features = false }